# 2048-hw

./: .gitignore
firmware/: Cargo.toml  memory.x
firmware/.cargo/: config
firmware/firmware/: Cargo.toml  Embed.toml  memory.x
firmware/firmware/examples/: eeprom.rs  input.rs  input_v1.rs  input_v2.rs  joystick.rs
firmware/firmware/src/: main.rs
firmware/mmxlviii/: Cargo.toml
firmware/mmxlviii/src/: board.rs  game_board.rs  lib.rs  score_board.rs
pcb/: 2048-hw-cache.lib  2048-hw-rescue.lib  2048-hw.kicad_pcb  2048-hw.kicad_pcb-bak  2048-hw.net  2048-hw.pro  2048-hw.sch  2048-hw.sch-bak  changelog.md  fp-info-cache  fp-lib-table  sym-lib-table
pcb/cubemx/: cubemx.ioc
pcb/libraries/: 2048-hw.dcm  2048-hw.lib
pcb/libraries/2048-hw.3dshapes/: ECS-80-12-30Q-DS-TR.step  EG2208.stp  EG2208A.stp
pcb/libraries/2048-hw.pretty/: AP2210N-3.3TRG1.kicad_mod  AT24C08D-XHM-B.kicad_mod  BatteryHolder_Keystone_2460_1xAA.kicad_mod  CUI_UJC-HP-3-SMT-TR.kicad_mod  E_SWITCH_EG2208.kicad_mod  E_SWITCH_EG2208A.kicad_mod  JOYSTICK-PSP1000.kicad_mod  LED_WS2812B_PLCC4_5.0x5.0mm_P3.2mm_no1.kicad_mod  SW_OS102011MS2QN1.kicad_mod  XTAL_ECS-80-18-30-JGN-TR.kicad_mod
pcb/libraries/AP2210N-3.3TRG1/: 2021-01-01_01-02-46.bck  2021-01-01_01-02-46.lib
pcb/libraries/AP2210N-3.3TRG1/footprints.pretty/: AP2210N-3.3TRG1.kicad_mod
pcb/libraries/CUI_UJC-HP-3-SMT-TR/: CUI_UJC-HP-3-SMT-TR.kicad_mod  UJC-HP-3-SMT-TR.lib
pcb/libraries/OS102011MS2QN1/: SW_OS102011MS2QN1.kicad_mod
pcb/libraries/psp1000/: JOYSTICK-PSP1000.kicad_mod  psp_1000_jstk-hackpackv4.lib
pcb/libraries/stm32l412kbt6/: 2020-12-31_07-15-33.lib
pcb/libraries/stm32l412kbt6/footprints.pretty/: STM32L412KBT6.kicad_mod
