[package]
authors = ["Christopher Hall <hallgchris@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "firmware"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.1"
cortex-m-rt = "0.6.13"
panic-halt = "0.2.0"

stm32f3 = {version = "0.13.2", features = ["stm32f303", "rt"]}
stm32f3xx-hal = {version = "0.7.0", features = ["stm32f303x8", "rt"]}

smart-leds = "0.3.0"
ws2812-spi = "0.4.0"

mmxlviii = { path = "../mmxlviii" }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "firmware"
test = false
bench = false
