[package]
name = "mmxlviii"
version = "0.1.0"
authors = ["Christopher Hall <hallgchris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.5.6"
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"
wyhash = "0.5.0"

[dependencies.rand]
version = "0.8.2"
default-features = false
